#

executable("ly_test") {
  sources = [
    "main.cc",
    "common_head.h",
    "at_exit_test.h",
    "at_exit_test.cc",
    "bind_callback_test.h",
    "bind_callback_test.cc",
    "task_test.h",
    "task_test.cc",
    "thread_test.h",
    "thread_test.cc",
    "pump_test.h",
    "pump_test.cc",
  ]
  deps = [
    "//base",
  ]
}
