#

executable("ly_test") {
  testonly = true
  sources = [
    "main.cc",
    "common_head.h",
    "at_exit_test.h",
    "at_exit_test.cc",
    "bind_callback_test.h",
    "bind_callback_test.cc",
    "task_test.h",
    "task_test.cc",
    "thread_test.h",
    "thread_test.cc",
    "pump_test.h",
    "pump_test.cc",
    "mojo_test.h",
    "mojo_test.cc",
    "v8_test.h",
    "v8_test.cc",
    "gin_test.h",
    "gin_test.cc",
  ]
  public_deps = [
    "//base:base",
    "//base:base_static",
    "//mojo:mojo",
    "//v8:v8",
    "//gin:gin",
    ":sub"
  ]
}

executable("sub") {
  testonly = true
  sources = [
    "sub_process.cc",
  ]
  public_deps = [
    "//base:base",
    "//base:base_static",
    "//mojo:mojo"
  ]
}
